<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_instructions"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_number_picker_instructions"/>

    <NumberPicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weight_number_picker"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/standard_drinks_number_picker_instructions"/>

    <NumberPicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/standard_drinks_number_picker"></NumberPicker>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/sex_radio_group">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/male_radio_button"
            android:text="@string/male_radio_button_text"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/female_radio_button"
            android:text="@string/female_radio_button_text"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculate_bac_button"
        android:text="@string/calculate_bac_button_text"
        android:background="@drawable/mybutton"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</LinearLayout>